fixed version mobile

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -36,7 +36,12 @@ body{
 }
 
 
+
 @media only screen and (max-width: 728px) {
+.center {
+  text-align:center;
+}
+
 .div-container{
     margin-top: 0px;
 }
